# i18n_compiler

./: Cargo.toml  README.md  cbindgen.toml  makefile
src/: i18n_compiler.rs  lib.rs  main.rs
test/: i18n.csv  i18n.numbers
