[package]
name = "i18n_compiler"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "i18n_compiler"
crate-type = ["staticlib", "cdylib","rlib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
calamine = "0.18.0"
lazy_static = "1.4"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.33"

[profile.release]
lto = true

[[bin]]
name = "i18n_compiler"
path = "src/main.rs"

[target.'cfg(target_os = "windows")']
linker = "x86_64-w64-mingw32-gcc"

